Split repos and major styling

--- a/src/index.scss
+++ b/src/index.scss
@@ -50,3 +50,15 @@ body {
   flex-direction: column;
   align-items: center;
 }
+
+.controls-container {
+  height: 200px;
+  width: 700px;
+  background-color: #ddffdd;
+}
+
+.game-container {
+  height: 500px;
+  width: 700px;
+  background-color: #ffdddd;
+}
